fixed input and fab align

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -55,58 +55,8 @@ body {
   }
 }
 
-
-
 #login{
   margin-top: 40px;
-}
-
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing{
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-
-  /* Make the masthead heading the same height as the navigation */
-  h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
-  }
-}
-
-/* Custom page footer */
-.footer {
-}
-
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-
-  .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-  }
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-
-  p + h4 {
-    margin-top: 28px;
-  }
 }
 
 /* Responsive: Portrait tablets and up */
@@ -170,7 +120,9 @@ core-toolbar {
 
 paper-fab{
   float: right;
+  margin-top: -12px;
 }
+
 #toolbartop{
   position: absolute;
   width: 100%;
@@ -178,7 +130,10 @@ paper-fab{
 }
 paper-input::shadow{
   color: #FFF;
+  width: 500px;
+  margin-left: 20px;
 }
+
 
 .container-chat{
   background: #FFF; 
